Fix font weight
I don't like the lighter font weight, it's hard to read, esp. on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,10 @@
 
 @import "{{ site.theme }}";
 
+a {
+  font-weight: normal;
+}
+
 /* Home */
 .post-list {
   margin-left: 0;
